--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: exsitu
+Package: XSitu
 Type: Package
 Title: Ex-Situ conservation gap analysis
-Version: 0.0-2
-Date: 2023-10-26
+Version: 1.0-0
+Date: 2023-10-28
 Imports: ape, terra
 Maintainer: Marwa El Graoui <r.hijmans@gmail.com>
 Author: Marwa El Graoui <r.hijmans@gmail.com>
@@ -14,4 +14,4 @@ LazyLoad: yes
 Authors@R: c(
 	person("Marwa", "El Graoui", role = c("cre", "aut"),  
 			email = "marwa@gmail.com", comment = c(ORCID = "0000-0000-0000-0000")),
-    person("Robert J.", "Hijmans", role = c("aut"), comment = c(ORCID = "0000-0003-2392-6140")))
+    person("Marwa", "El Graoui", role = c("aut"), comment = c(ORCID = "0000-0003-2392-6140")))
